--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,15 @@
 buildscript {
+    ext {
+        kotlinVersion = '1.2.41'
+        appCompatVersion = '27.1.1'
+        daggerVersion = '2.15'
+    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath 'com.android.tools.build:gradle:3.1.2'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
