--- a/example-app/src/main/AndroidManifest.xml
+++ b/example-app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="gs.apklib.example.app">
 
     <application
+        android:name=".Application"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
