--- a/example-app/build.gradle
+++ b/example-app/build.gradle
@@ -18,7 +18,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -41,7 +41,7 @@ dependencies {
 }
 
 def libProject = evaluationDependsOn(':example-lib')
-def libTask = libProject.tasks['bundleLibApkImplDebug']
+def libTask = libProject.tasks['bundleLibApkImplRelease']
 
 task importLibApkAsAsset(type: Copy) { self ->
     from libTask.outputs
