--- a/example-lib/build.gradle
+++ b/example-lib/build.gradle
@@ -11,6 +11,13 @@ android {
         targetSdkVersion 27
     }
 
+    buildTypes {
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
     flavorDimensions 'default'
     productFlavors {
         core
@@ -27,5 +34,6 @@ dependencies {
 
     implImplementation "com.google.dagger:dagger:$daggerVersion"
 
+    implementation "com.android.support:support-annotations:$appCompatVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
 }
